syntax = "proto3";

option go_package = "github.com/kokiebisu/mycontent/packages/shared/proto/stub";

service BlogService {
  rpc CreateBlog(CreateBlogRequest) returns (CreateBlogResponse);
}

message CreateBlogRequest {
  string user_id = 1;
  string title = 2;
  string url = 3;
  string created_at = 4;
}

message CreateBlogResponse {
  string id = 1;
  string error = 2;
}
